# sphinx-unpack

./: .cruft.json  .gitignore  CITATION.cff  README.md  pyproject.toml  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
awkard-octopus/: README.md  justfile  pyproject.toml
awkard-octopus/docs/: conf.py  index.rst
awkard-octopus/src/awkward_octopus/: __init__.py
docs/source/: conf.py  index.rst  installation.rst  reference.rst  usage.rst
sphinx-unpack/: README.md  pyproject.toml
sphinx-unpack/src/sphinx_unpack/: __init__.py
sphinx-unpack/tests/: __init__.py  test_plugin.py
src/sphinx_unpack/: __init__.py  version.py
tests/: test_plugin.py
